--- a/aerospace.toml
+++ b/aerospace.toml
@@ -44,7 +44,7 @@ alt-k = 'focus up'
 alt-l = 'focus right'
 
 # Cycle focus through windows in workspace
-alt-w = 'focus --boundaries workspace --boundaries-action wrap-around-the-workspace next'
+alt-w = 'focus --boundaries workspace --boundaries-action wrap-around-the-workspace dfs-next'
 
 # Move windows
 alt-shift-h = 'move left'
